--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2007-07-20  Alex Schroeder  <alex@gnu.org>
+
+	* modules/creole.pl (CreoleRule): Be more tolerant with whitespace
+	following $FullUrlPattern.
+
+2007-07-10  Alex Schroeder  <alex@gnu.org>
+
+	* modules/creole.pl (CreoleRule): Fix {{{{bar}}}}.
+
+	* wiki.pl (GetCss): Another fix to a bug introduced in revision
+	1.784.
+
 2007-07-04  Alex Schroeder  <alex@gnu.org>
 
 	* modules/archive.pl (NewArchiveGetHeader): Provide different
