*** empty log message ***

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-08-06 Alexander Uvizhev  <uvizhe@yandex.ru>
+
+	* modules/linktagmap.pl: "tag" parameter renamed to "linktag".
+	(GenerateSearchResult): Renamed to GenerateLinkSearchResult becouse of
+	conflict with the same named subroutine in tagmap module.
+
 2007-08-05  Alex Schroeder  <alex@gnu.org>
 
 	* wiki.pl (InitLinkPatterns): Added feed to $UrlProtocols.
