--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2007-08-17  Alex Schroeder  <alex@gnu.org>
 
+	* modules/questionasker.pl: Allow seven lives for cats.
+
 	* modules/toc.pl (TocInit): Moved some init code here.
 
 2007-08-16  Alex Schroeder  <alex@gnu.org>
