--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-09-14  Alex Schroeder  <alex@gnu.org>
+
+	* modules/search-freetext.pl (NewSearchFreeTextTitleAndBody):
+	Added unwanted tags using -tag:foo syntax.
+
 2007-09-12  Alex Schroeder  <alex@gnu.org>
 
 	* wiki.pl (LinkRules, GetUrl): Handle the difference between
