--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-10-06  Alex Schroeder  <alex@gnu.org>
 
+	* wiki.pl (GetRcLines): Handle rollback hiding for single page
+	rollbacks.
+	(DoRollback): Leave marker for single page rollbacks.
+	(RcTextRevision): Encode id for the current revision.
+
 	* modules/permanent-anchors.pl (PermanentAnchorsRule): Permanent
 	anchor definitions are dirty, thus print instead of return the
 	HTML string.
