--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2007-10-07  Alex Schroeder  <alex@gnu.org>
+
+	* modules/questionasker.pl (NewQuestionaskerDoPost): Pass on
+	parameters and ask another question if the question has not been
+	answered.
+	(NewQuestionaskerGetFormStart, NewQuestionaskerGetEditForm): Hook
+	into GetEditForm instead of GetFormStart. Add a submit button if
+	required.
+
 2007-10-06  Alex Schroeder  <alex@gnu.org>
 
 	* wiki.pl (GetRcLines): Handle rollback hiding for single page
