--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2007-11-07  Alex Schroeder  <alex@gnu.org>
+
+	* modules/namespaces.pl (NewNamespaceBrowsePage): Fix test from
+	$WikiLinks to $FreeLinks.
+
+2007-11-03  Alex Schroeder  <alex@gnu.org>
+
+	* wiki.pl (DoHistory): Add compare button to the top of the list.
+
 2007-11-06  Alex Schroeder  <alex@gnu.org>
 
 	* wiki.pl (GetHtmlHeader): Add
