--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-11-28  Alex Schroeder  <aschroeder@localhost>
+
+	* modules/strange-spam.pl (StrangeNewBannedContent): Apply test to
+	page name as well.
+
 2007-11-22  Alex Schroeder  <alex@gnu.org>
 
 	* wiki.pl (GetInterLink): Enclose the ":" in a separate span.
