*** empty log message ***

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,14 @@
+2008-02-19  Alex Schroeder  <alex@gnu.org>
+
+	* modules/questionasker.pl (NewQuestionaskerDoPost,
+	QuestionAddTo): Editor password is good enough as suggested by
+	Weakish Jiang.
+
 2008-02-01  Alex Schroeder  <alex@gnu.org>
 
 	* wiki.pl (PrintFooter): Print newline at the very end. Apparently
 	that solves a FCGI problem.
+	(PrintHtmlDiff): Handle cache=0 as noted by Markus Lude.
 
 2008-01-28  Alex Schroeder  <aschroeder@localhost>
 
