--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-04-25 Weakish Jiang <weakish@gmail.com>
+	* module/search-list.pl ($Action, DoList): New action.
+
 2008-04-12 Weakish Jiang <weakish@gmail.com>
 
 	* module/creoleaddition.pl ($CreoleAdditionMonospace): New option.
